Importer and Converter implemented

--- a/ModelLabsProjekat/ModelLabs/CIMAdapter/CIMAdapter.csproj
+++ b/ModelLabsProjekat/ModelLabs/CIMAdapter/CIMAdapter.csproj
@@ -82,9 +82,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CIMAdapter.cs" />
+    <Compile Include="Importer\Converter.cs" />
+    <Compile Include="Importer\Importer.cs" />
     <Compile Include="Importer\ImportHelper.cs" />
-    <Compile Include="Importer\PowerTransformerConverter.cs" />
-    <Compile Include="Importer\PowerTransformerImporter.cs" />
     <Compile Include="Manager\LogManager.cs" />
     <Compile Include="Manager\ProfileManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -99,6 +99,10 @@
       <Project>{892CBE15-9ED7-4540-81FA-0EAABA592138}</Project>
       <Name>Common %28Common\Common%29</Name>
     </ProjectReference>
+    <ProjectReference Include="..\NetworkModelService\DataModel\DataModel.csproj">
+      <Project>{ADE96497-7C11-40B6-AE82-57F956C9F104}</Project>
+      <Name>DataModel</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ServiceContracts\NetworkModelQueryContract\NetworkModelGDAContract.csproj">
       <Project>{B726FB71-D295-41EE-9644-B2B0B1BC8911}</Project>
       <Name>NetworkModelGDAContract</Name>
@@ -107,7 +111,6 @@
   <ItemGroup>
     <Content Include="Lib\PowerTransformerCIMProfile_Labs.dll" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
