--- a/ModelLabsProjekat/ModelLabs/CIMAdapter/CIMAdapter.csproj
+++ b/ModelLabsProjekat/ModelLabs/CIMAdapter/CIMAdapter.csproj
@@ -108,6 +108,7 @@
       <Name>NetworkModelGDAContract</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Lib\PowerTransformerCIMProfile_Labs.dll" />
   </ItemGroup>
